# treeviz

./: .envrc  .gitignore  LAYOUT_ANALYSIS.md  LICENSE  README.md  README.txt  analyze_rst.py  pyproject.toml  rst_ast.xml
.github/: branch-protection.json  main-pr-tests.json
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: publish-pypi.yml  unittests.yml
docs/: adapter-walkthrough.md  adapters.md  examples.md  theui.md  user-guide.md
docs/shell-help/: 3viz-output.md  adapters.md  getting-started.md
e2e-tests/: test_asciidoc.sh
python/: my_custom_adapter.json
python/examples/: custom_adapter.yaml  custom_icons_demo.py  presentation_default.yaml  presentation_developer.yaml  presentation_documentation.yaml  simple_icon_example.py  style_compact.yaml  style_default.yaml
python/src/clier/: __init__.py
python/src/clier/cmdhelp/: __init__.py
python/src/clier/config/: manager.py
python/src/clier/learn/: __init__.py  learn.py
python/src/clier/rendering/: __init__.py  base.py  message.py  renderer.py
python/src/config/: __init__.py  manager.py
python/src/treeviz/: __init__.py  __main__.py  adapter.py  advanced_extraction.py  cli.py  commands.py  config.py  const.py  converter.py  exceptions.py  icon_pack.py  model.py  renderer.py  result.py  treeviz.py  viz.py
python/src/treeviz/adapters/: __init__.py  adapters.py  advanced_extraction.py  core.py  mdast.py  unist.py  utils.py
python/src/treeviz/config/: __init__.py  loaders.py  styles.yaml  view.yaml
python/src/treeviz/configs/: __init__.py  default.json  json.json  sample.json
python/src/treeviz/data/: __init__.py  pandoc.py  restructuredtext.py
python/src/treeviz/definitions/: __init__.py  default.json  definitions.py  lib.py  mdast.json  model.py  sample.json  schema.py  unist.json  user_config.py  user_lib_commands.py  yaml_utils.py
python/src/treeviz/docs/: pandoc.py
python/src/treeviz/formats/: __init__.py  html_format.py  model.py  parser.py  pformat.py  xml_format.py
python/src/treeviz/rendering/: __init__.py  icon_resolver.py  options.py  presentation.py  presentation_loader.py  simple_layout.py  theme.py  theme_provider.py  tree_formatter.py
python/src/treeviz/themes/: __init__.py  high_contrast.yaml
python/tests/: conftest.py  test__children_selector.py  test_api.py  test_asciidoc_adapter.py  test_children_selector.py  test_cli.py  test_cli_integration.py  test_collection_mapping.py  test_collection_mapping_paths.py  test_declarative_adapters.py  test_filter_consistency.py  test_flatten_transformation.py  test_formats.py  test_html_format.py  test_integration_children_selector.py  test_integration_declarative_adapters.py  test_integration_essential.py  test_integration_formats.py  test_integration_html_format.py  test_integration_pformat.py  test_integration_xml_format.py  test_load_extensions.py  test_mediawiki_adapter.py  test_node_from_dict.py  test_output_constants.py  test_pandoc_adapter.py  test_pandoc_declarative.py  test_pformat.py  test_string_literal_fallback.py  test_transform_pipelines.py  test_type_override_system.py  test_user_config_integration.py  test_xml_format.py
python/tests/config/: test_loaders.py  test_manager.py
python/tests/rendering/: test_theme.py
python/tests/test_data/: 3viz_simple.json
python/tests/test_data/asciidoc/: README.adoc  README.txt  README.xml  article.adoc  article.xml  demo.adoc  demo.xml  hard-line-breaks.adoc  hard-line-breaks.xml
python/tests/test_data/markdown-references/: commonmark-complex.json  commonmark-complex.md  commonmark-medium.json  commonmark-medium.md  commonmark-simple.json  gfm-tables-proper.json  gfm-tables.json  gfm-tasklist-proper.json  gfm-tasklist.json  gfm-tasklist.md  package.json
python/tests/test_data/mdast/: code_heavy_example.json  comprehensive_example.json  real_world_example.json  simple_document.json  simple_tree.json
python/tests/test_data/mediawiki/: complex1.json  complex1.mw  complex2.json  complex2.mw  (+9 more)
python/tests/threeviz/: test_config.py  test_converter.py  test_edge_cases_hardcore.py  test_mdast_adapter.py  test_phase2_integration.py  test_renderer.py  test_type_safe_transformations.py  test_unist_adapter.py
python/tests/treeviz/: fixtures.py  test__generate_viz.py  test__node_model.py  test_config.py  test_integration_config.py  test_integration_model.py  test_model.py
reference-outputs/: 3viz_simple_text.txt  asciidoc_demo_term.txt  mdast_comprehensive_text.txt  pandoc_test_term.txt
scripts/: clear-cache  gh-add-branch-protection  git-net-total  loc-tree  pre-commit  py-clear-cache  py-pre-commit  py-remove-cache  sync-docs.sh  test
shell-e2e/: run-all-tests.sh  test-adapter-format-compatibility.sh  test-asciidoc-adapter-reliability.sh  test-mdast-adapter-reliability.sh  test-mediawiki-adapter-reliability.sh  test-pandoc-adapter-reliability.sh
test-data/: pandoc_test.md
test-data/formats/: malformed.json  malformed.pformat  sample.json  sample.pformat  sample.yaml  simple.html  simple.json  simple.xml
test-docs/: test-assertion-positions.3viz.json
test-docs/elements/annotations/: annotation-simple.3viz.json
test-docs/elements/content-container/: content-container.simple.3viz.json
test-docs/elements/definitions/: definition-basic.3viz.json  definition-complex.3viz.json  definition-edge-cases.3viz.json  definition-simple.3viz.json
test-docs/elements/inline/: inline-simple.3viz.json
test-docs/elements/lists/: list-basic.3viz.json  list-simple.3viz.json  lists-edgecases.3viz.json
test-docs/elements/paragraph/: paragraph-basic.3viz.json
test-docs/elements/parameters/: parameters-simple.3viz.json
test-docs/elements/references/: references-simple.3viz.json
test-docs/elements/sessions/: session-ancestors.3viz.json  session-basic.3viz.json
test-docs/elements/verbatim/: verbatim-simple.3viz.json
test-docs/ensambles/: simple.3viz.json  tour.3viz.json
test-docs/escaping/: test_escaping.3viz.json  test_simple_escaping.3viz.json
test-docs/specs/: micro.3viz.json  nano.3viz.json
test-docs/structure/: session-structure.3viz.json
(+146 files in other folders)
