[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

description = "visuazlizes ast for document formats"
name = "treeviz"
readme = { file = "README.txt", content-type = "text/plaintxt" }
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Arthur Debert", email = "arthur@debert.xyz" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/arthur-debert/treeviz-py" }

#[project.scripts]
#treeviz = "treeviz.main"

###############################################################################
### poetry
###############################################################################
[tool.poetry]
version = "0.0.1"
packages = [{ include = "threeviz", from = "src" }]
include = ["src/threeviz/**", "LICENSE", "README.txt"]
exclude = ["tests"]


###############################################################################
### dependencies
###############################################################################
[tool.poetry.dependencies]
python = ">=3.13,<4"
click = "^8.1.7"
poetry = "^2.0.0"
# Scripts are now defined in [project.scripts] section
rich = "^14.1.0"
lark = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "6.0.0"
pytest-xdist = "3.6.1"
python-dotenv = "1.0.1"
setuptools = "75.3.0"
six = "1.16.0"
stack-data = "0.6.3"
black = "^24.10.0"
flake8 = "^7.1.1"
piccolo-theme = "^0.24.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
autoflake8 = "^0.4.1"

###############################################################################
### black
###############################################################################
[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


###############################################################################
### pytest
###############################################################################
[tool.pytest.ini_options]
addopts = "-v -rN -q"
testpaths = ["python/tests", "python/src"]
python_files = ["test_*.py"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
markers = [
    "session_refactor_skip: tests that will obviously break during session refactoring",
]


###############################################################################
### virtualenv
###############################################################################
[tool.virtualenv]
create = true
in-project = true
include = ["python/src", "python/tests"]

###############################################################################
### coverage
###############################################################################
[tool.coverage.run]
source = ["src"]
omit = [
    "python/tests/*",
    "*/tests/*",
    "src/threeviz/logger.py",
    "src/threeviz/output/*",
    "src/threeviz/main.py",
    "src/threeviz/cli.py",
    "src/threeviz/api/*",
]

[tool.coverage.report]
sort = "-Cover"
exclude_lines = [
    "annotation: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

###############################################################################
### poe tasks
###############################################################################
[tool.poe.tasks]
