[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

description = "visuazlizes ast for document formats"
name = "treeviz"
readme = { file = "README.txt", content-type = "text/plaintxt" }
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Arthur Debert", email = "arthur@debert.xyz" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/arthur-debert/treeviz-py" }

#[project.scripts]
#treeviz = "treeviz.main"

###############################################################################
### poetry
###############################################################################
[tool.poetry]
version = "0.0.1"
packages = [{ include = "treeviz", from = "python/src" }]
include = ["docs/shell-help/*.md", "LICENSE", "README.txt"]
exclude = ["tests"]

[tool.poetry.scripts]
3viz = "treeviz.__main__:main"


###############################################################################
### dependencies
###############################################################################
[tool.poetry.dependencies]
python = ">=3.12,<4"
click = "^8.1.7"
poetry = "^2.0.0"
# Scripts are now defined in [project.scripts] section
rich = "^14.1.0"
lark = "^1.3.0"
ruamel-yaml = "^0.18.6"
beautifulsoup4 = "^4.14.0"
docutils = "^0.22.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "6.0.0"
pytest-xdist = "3.6.1"
python-dotenv = "1.0.1"
setuptools = "75.3.0"
six = "1.16.0"
stack-data = "0.6.3"
black = "^24.10.0"
flake8 = "^7.1.1"
piccolo-theme = "^0.24.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
autoflake8 = "^0.4.1"

###############################################################################
### black
###############################################################################
[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


###############################################################################
### pytest
###############################################################################
[tool.pytest.ini_options]
addopts = "-v -rN -q"
testpaths = ["python/tests", "python/src"]
pythonpath = ["python/src"]
python_files = ["test_*.py"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
markers = [
    "session_refactor_skip: tests that will obviously break during session refactoring",
]


###############################################################################
### virtualenv
###############################################################################
[tool.virtualenv]
create = true
in-project = true
include = ["python/src", "python/tests"]

###############################################################################
### coverage
###############################################################################
[tool.coverage.run]
source = ["python/src"]
omit = [
    "python/tests/*",
    "*/tests/*",
    "python/src/treeviz/logger.py",
    "python/src/treeviz/output/*",
    "python/src/treeviz/main.py",
    "python/src/treeviz/cli.py",
    "python/src/treeviz/api/*",
    "python/src/treeviz/__main__.py",
]

[tool.coverage.report]
sort = "-Cover"
exclude_lines = [
    "annotation: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

###############################################################################
### poe tasks
###############################################################################
[tool.poe.tasks]
